# syntabair

./: .gitignore  NOTICE  README.md  appendices.md  pyproject.toml
embeddings/: airport_network.py  anomaly_detection.py  carrier.py  cluster.py  delay_analysis.py  embedding_navigation.py  pca_interpretation.py  route.py  seasonal_pattern.py  turnaround_analysis.py
results/: .gitignore  fidelity.md  privacy.md  utility.md
scripts/: evaluate_fidelity.py  evaluate_privacy.py  evaluate_utility.py  generate_fidelity_latex_table.py  generate_with_copula.py  generate_with_ctgan.py  generate_with_rtf.py  generate_with_tabsyn.py  plot_fidelity.py  plot_privacy.py  plot_utility.py  prepare_data.py  train_ctgan.py  train_rtf.py  train_tabsyn.py
src/syntabair/evaluation/: README.md
src/syntabair/evaluation/fidelity/: __init__.py  common.py  correlation.py  detection.py  distribution.py  likelihood.py  statistical.py
src/syntabair/evaluation/privacy/: __init__.py  cap.py  common.py  dcr_baseline_protection.py  dcr_overfitting_proection.py
src/syntabair/evaluation/utility/: __init__.py  tstr.py
src/syntabair/generators/: __init__.py
src/syntabair/generators/copula/: __init__.py  base.py  gaussian.py  utils.py
src/syntabair/generators/ctgan/: __init__.py  base.py  ctgan.py  data_sampler.py  data_transformer.py
src/syntabair/generators/rtf/: __init__.py  realtabformer.py  rtf_analyze.py  rtf_data_utils.py  rtf_datacollator.py  rtf_exceptions.py  rtf_sampler.py  rtf_trainer.py  (+1 more)
src/syntabair/preprocessing/: __init__.py  flight_data.py  prepare_data.py
(+9 files in other folders)
