[tool.poetry]
name = "syntabair"
version = "0.1.0"
description = "Synthetic Tabular data generation for the SynthAIr project"
authors = ["Abdulmajid Murad <abdulmajid.murad@sintef.no>"]
readme = "README.md"
repository = "https://github.com/SynthAIr/tabsynthr"
packages = [{include = "syntabair", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pandas = ">=2.2.3,<3.0.0"
jupyterlab = ">=4.3.5,<5.0.0"
numpy = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.1,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
openpyxl = ">=3.1.5,<4.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
plotly = ">=6.0.0,<7.0.0"
optuna = ">=4.2.1,<5.0.0"
lightgbm = ">=4.6.0,<5.0.0"
datasets = ">=3.4.1,<4.0.0"
shapely = ">=2.0.7,<3.0.0"
xgboost = ">=3.0.0,<4.0.0"
category-encoders = ">=2.8.1,<3.0.0"
einops = ">=0.8.1,<0.9.0"
hyper-connections = ">=0.1.15,<0.2.0"
wandb = ">=0.19.9,<0.20.0"
schedulefree = ">=1.4.1,<2.0.0"
pynvml = ">=12.0.0,<13.0.0"
umap = ">=0.1.1,<0.2.0"
umap-learn = ">=0.5.7,<0.6.0"
python-louvain = ">=0.16,<0.17"
transformers = ">=4.51.3,<5.0.0"
catboost = ">=1.2.8,<2.0.0"
pomegranate = ">=1.1.2,<2.0.0"
rdt = "^1.16.0"
hdbscan = "^0.8.40"
adjusttext = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"